[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
text = "Are you ready?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -107.879
margin_top = -203.0
margin_right = 116.121
margin_bottom = -103.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameTimer" type="Timer" parent="."]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
